--- a/9/Dockerfile
+++ b/9/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:8-jdk-alpine
+FROM openjdk:9-jdk-slim
 
 ENV ASUSER='' \
     UID='' \
@@ -26,24 +26,23 @@ ENV ASUSER='' \
 
 WORKDIR /app
 
-RUN adduser -D -u 1337 kool \
-    && echo $TZ > /etc/timezone \
+RUN echo $TZ > /etc/timezone \
     # build-deps
-    && apk add --no-cache --virtual .build-deps curl libarchive-tools \
+    && apt-get update \
+    && apt-get install -o APT::Immediate-Configure=false -y --no-install-recommends curl libarchive-tools \
     # dockerize
     && curl -L https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-alpine-linux-amd64-v0.6.1.tar.gz | tar xz \
     && mv dockerize /usr/local/bin/dockerize \
     # deps
-    && apk add --no-cache su-exec bash shadow tzdata \
-       maven gradle \
+        && apt-get install -y --no-install-recommends maven gradle \
     # hotswap
-    && mkdir -p /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm \
+    && mkdir -p /usr/lib/jvm/java-9-openjdk-amd64/jre/lib/amd64/dcevm \
         && curl -L https://github.com/dcevm/dcevm/releases/download/light-jdk8u181/DCEVM-8u181-installer.jar | bsdtar -xf- -C /tmp/ \
-    && cp /tmp/linux_amd64_compiler2/product/libjvm.so /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm/libjvm.so \
+    && cp /tmp/linux_amd64_compiler2/product/libjvm.so /usr/lib/jvm/java-9-openjdk-amd64/jre/lib/amd64/dcevm/libjvm.so \
         && mkdir -p /kool \
     && curl -L -o /kool/hotswap-agent.jar https://github.com/HotswapProjects/HotswapAgent/releases/download/RELEASE-1.4.1/hotswap-agent-1.4.1.jar \
-    && apk del .build-deps \
-    && rm -rf /var/cache/apk/* /tmp/*
+    && apt-get purge -y --auto-remove curl libarchive-tools \
+    && rm -rf /var/lib/apt/lists/* /tmp/*
 
 COPY kool.vmoptions /kool/kool.tmpl
 COPY entrypoint /kool/entrypoint
