--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [8]
+        version: [7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
         type: ['', '-prod']
 
     steps:
