--- a/7/Dockerfile
+++ b/7/Dockerfile
@@ -1,10 +1,10 @@
-FROM openjdk:8-jre-alpine
+FROM openjdk:7-jdk-alpine
 
 ENV ASUSER='' \
     UID='' \
     VM_OPTIONS_XMS=256m \
     VM_OPTIONS_XMX=256m \
-    VM_OPTIONS_MAX_METASPACE_SIZE=512m \
+    VM_OPTIONS_PERM_SIZE=512m \
     VM_OPTIONS_XMN=64m \
     VM_OPTIONS_SURVIVOR_RATIO=128 \
     CMS_TRIGGER_PERCENT=70 \
@@ -15,7 +15,14 @@ ENV ASUSER='' \
     TZ='' \
     JAVA_OPTIONS='' \
     ENTRYPOINT='' \
-    JAR_FILE='/app/application.jar'
+    RMI_SERVER_HOSTNAME='' \
+    JVM_JMXREMOTE_PORT='' \
+    JVM_JMXREMOTE_AUTHENTICATE='' \
+    JVM_JMXREMOTE_SSL='' \
+    DEBUG_PORT=9000 \
+    DEBUG_SUSPEND=n \
+    CLASSPATH='' \
+    MAIN_CLASS=''
 
 WORKDIR /app
 
@@ -28,6 +35,13 @@ RUN adduser -D -u 1337 kool \
     && mv dockerize /usr/local/bin/dockerize \
     # deps
     && apk add --no-cache su-exec bash shadow tzdata \
+       maven gradle \
+    # hotswap
+    && mkdir -p /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm \
+        && curl -L https://github.com/dcevm/dcevm/releases/download/light-jdk7u79%2B3/DCEVM-light-7u79-installer.jar | bsdtar -xf- -C /tmp/ \
+    && cp /tmp/linux_amd64_compiler2/product/libjvm.so /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm/libjvm.so \
+        && mkdir -p /kool \
+    && curl -L -o /kool/hotswap-agent.jar https://github.com/HotswapProjects/HotswapAgent/releases/download/RELEASE-1.4.1/hotswap-agent-1.4.1.jar \
     && apk del .build-deps \
     && rm -rf /var/cache/apk/* /tmp/*
 
@@ -35,6 +49,5 @@ COPY kool.vmoptions /kool/kool.tmpl
 COPY entrypoint /kool/entrypoint
 RUN chmod +x /kool/entrypoint
 
-EXPOSE $DEBUG_PORT
 
 ENTRYPOINT [ "dockerize", "-template", "/kool/kool.tmpl:/kool/kool.vmoptions", "/kool/entrypoint" ]
