Without java agent and agent lib becausa was failed

--- a/11/Dockerfile
+++ b/11/Dockerfile
@@ -40,11 +40,11 @@ RUN adduser -D -u 1337 kool \
     && apk add --no-cache su-exec bash shadow tzdata \
        maven gradle \
     # hotswap
-    && mkdir -p /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm \
-        && curl -L https://github.com/dcevm/dcevm/releases/download/light-jdk8u181/DCEVM-8u181-installer.jar | bsdtar -xf- -C /tmp/ \
-    && cp /tmp/linux_amd64_compiler2/product/libjvm.so /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm/libjvm.so \
-        && mkdir -p /kool \
-    && curl -L -o /kool/hotswap-agent.jar https://github.com/HotswapProjects/HotswapAgent/releases/download/RELEASE-1.4.1/hotswap-agent-1.4.1.jar \
+    #&& mkdir -p /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm \
+    #&& curl -L https://github.com/dcevm/dcevm/releases/download/light-jdk8u181/DCEVM-8u181-installer.jar | bsdtar -xf- -C /tmp/ \
+    #&& cp /tmp/linux_amd64_compiler2/product/libjvm.so /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm/libjvm.so \
+    #&& mkdir -p /kool \
+    #&& curl -L -o /kool/hotswap-agent.jar https://github.com/HotswapProjects/HotswapAgent/releases/download/RELEASE-1.4.1/hotswap-agent-1.4.1.jar \
     && apk del .build-deps \
     && rm -rf /var/cache/apk/* /tmp/*
 
