--- a/kool.yml
+++ b/kool.yml
@@ -3,6 +3,9 @@ scripts:
   build:
     # parse templates
     - kool run template
+    # JAVA 16
+    - docker build --pull -t kooldev/java:16 16
+    - docker build --pull -t kooldev/java:16-prod 16-prod
     # JAVA 15
     - docker build --pull -t kooldev/java:15 15
     - docker build --pull -t kooldev/java:15-prod 15-prod
