--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,12 +42,12 @@ jobs:
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
-        if: github.ref == 'refs/heads/master' && github.repository == 'kool-dev/docker-java'
+        if: github.ref == 'refs/heads/main' && github.repository == 'kool-dev/docker-java'
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push to DockerHub
-        if: github.ref == 'refs/heads/master' && github.repository == 'kool-dev/docker-java'
+        if: github.ref == 'refs/heads/main' && github.repository == 'kool-dev/docker-java'
         run: |
           docker push kooldev/java:${{ matrix.version }}${{ matrix.type }}
