Add version variation to gradle and build project before run

--- a/11/Dockerfile
+++ b/11/Dockerfile
@@ -2,9 +2,8 @@ FROM amazoncorretto:11-alpine-jdk
 
 ENV ASUSER='' \
     UID='' \
-    VM_OPTIONS_XMS=256m \
     VM_OPTIONS_XMX=256m \
-    VM_OPTIONS_MAX_METASPACE_SIZE=512m \
+    VM_OPTIONS_MAX_METASPACE_SIZE=128m \
     VM_OPTIONS_XMN=64m \
     VM_OPTIONS_SURVIVOR_RATIO=128 \
     CMS_TRIGGER_PERCENT=70 \
@@ -15,6 +14,9 @@ ENV ASUSER='' \
     TZ='' \
     JAVA_OPTIONS='' \
     ENTRYPOINT='' \
+    VM_OPTIONS_METASPACE_SIZE=64m \
+    VM_OPTIONS_XMS=32m \
+    SDKMAN_DIR=/usr/local/sdkman \
     RMI_SERVER_HOSTNAME='' \
     JVM_JMXREMOTE_PORT='' \
     JVM_JMXREMOTE_AUTHENTICATE='' \
@@ -35,15 +37,21 @@ RUN adduser -D -u 1337 kool \
     && mv dockerize /usr/local/bin/dockerize \
     # deps
     && apk add --no-cache su-exec bash shadow tzdata \
-       libc6-compat maven gradle \
+       libc6-compat zip \
     && ln -s /lib/libc.musl-x86_64.so.1 /lib/ld-linux-x86-64.so.2 \
     && mkdir -p /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm \
     && curl -L https://github.com/dcevm/dcevm/releases/download/light-jdk8u181%2B2/DCEVM-8u181-installer-build2.jar | bsdtar -xf- -C /tmp/ \
     && cp /tmp/linux_amd64_compiler2/product/libjvm.so /usr/lib/jvm/default-jvm/jre/lib/amd64/dcevm/libjvm.so \
     && mkdir -p /kool \
     && curl -L -o /kool/hotswap-agent.jar https://github.com/HotswapProjects/HotswapAgent/releases/download/RELEASE-1.4.1/hotswap-agent-1.4.1.jar \
+    && curl -s https://get.sdkman.io | bash \
     && apk del .build-deps \
     && rm -rf /var/cache/apk/* /tmp/*
+
+RUN apk add --no-cache curl \
+    && bash -c "source /usr/local/sdkman/bin/sdkman-init.sh && sdk install maven && sdk install gradle "
+
+ENV PATH="$SDKMAN_DIR/candidates/maven/current/bin:$SDKMAN_DIR/candidates/gradle/current/bin:$PATH"
 
 COPY kool.vmoptions /kool/kool.tmpl
 COPY entrypoint /kool/entrypoint
