--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         version: [8, 11, 15, 16]
-        type: ['', '-prod']
+        type: ['', '-g5', '-g6', '-prod']
 
     steps:
       - name: Checkout code
